Add multi-path examples to help and update Apache Commons Lang documentation
Co-authored-by: gliptak <50109+gliptak@users.noreply.github.com>